--- a/src/collective/listmonk/locales/collective.listmonk.pot
+++ b/src/collective/listmonk/locales/collective.listmonk.pot
@@ -4,7 +4,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2024-04-09 21:59+0000\n"
+"POT-Creation-Date: 2024-04-22 18:07+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI +ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -52,7 +52,7 @@ msgstr ""
 msgid "email_mailing_footer"
 msgstr ""
 
-#. Default: "You are now subscribed to the ${newsletter}\n\nYou can unsubscribe using this link:\n${unsubscribe_link}\n"
+#. Default: "You are now subscribed to the ${newsletter}\n\nYou can unsubscribe using this link:\n${unsubscribe_link}?s=${sub_uuid}\n"
 #: collective-listmonk/src/collective/listmonk/services/subscriptions.py:146
 msgid "email_subscribed_body"
 msgstr ""
