--- a/src/collective/listmonk/locales/de/LC_MESSAGES/collective.listmonk.po
+++ b/src/collective/listmonk/locales/de/LC_MESSAGES/collective.listmonk.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2024-04-09 21:56+0000\n"
+"POT-Creation-Date: 2024-04-22 18:07+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI +ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -37,7 +37,13 @@ msgstr ""
 #. Default: "Someone has requested a subscription to ${newsletter}\n\nTo confirm this subscription, click this link:\n${confirm_link}\n\nIf you did not request this subscription, you can ignore this email.\n"
 #: collective/listmonk/services/subscriptions.py:87
 msgid "email_confirm_body"
-msgstr "Jemand hat ein Abonnement für ${newsletter} angefordert\n\nUm dieses Abonnement zu bestätigen, klicken Sie auf diesen Link:\n${confirm_link}\n\nWenn Sie dieses Abonnement nicht angefordert haben, können Sie diese E-Mail ignorieren.\n"
+msgstr ""
+"Jemand hat ein Abonnement für ${newsletter} angefordert\n"
+"\n"
+"Um dieses Abonnement zu bestätigen, klicken Sie auf diesen Link:\n"
+"${confirm_link}\n"
+"\n"
+"Wenn Sie dieses Abonnement nicht angefordert haben, können Sie diese E-Mail ignorieren.\n"
 
 #. Default: "Confirm Subscription"
 #: collective/listmonk/services/subscriptions.py:83
@@ -47,12 +53,20 @@ msgstr "Abonnement bestätigen"
 #. Default: "---\nUnsubscribe: ${unsubscribe_link}"
 #: collective/listmonk/content/newsletter.py:77
 msgid "email_mailing_footer"
-msgstr "---\nZur Abbestellung dieses Newsletters bitte auf folgenden Link klicken:\n${unsubscribe_link}"
+msgstr ""
+"---\n"
+"Zur Abbestellung dieses Newsletters bitte auf folgenden Link klicken:\n"
+"${unsubscribe_link}"
 
-#. Default: "You are now subscribed to the ${newsletter}\n\nYou can unsubscribe using this link:\n${unsubscribe_link}\n"
+#. Default: "You are now subscribed to the ${newsletter}\n\nYou can unsubscribe using this link:\n${unsubscribe_link}?s=${sub_uuid}\n"
 #: collective/listmonk/services/subscriptions.py:146
+#, fuzzy
 msgid "email_subscribed_body"
-msgstr "Sie haben jetzt den ${newsletter} abonniert\n\nZur Abbestellung dieses Newsletters bitte auf folgenden Link klicken:\n${unsubscribe_link}\n"
+msgstr ""
+"Sie haben jetzt den ${newsletter} abonniert\n"
+"\n"
+"Zur Abbestellung dieses Newsletters bitte auf folgenden Link klicken:\n"
+"${unsubscribe_link}?s=${sub_uuid}\n"
 
 #. Default: "Subscription confirmed"
 #: collective/listmonk/services/subscriptions.py:142
